--- a/index.Rmd
+++ b/index.Rmd
@@ -1,11 +1,28 @@
 ---
 title: "temporal stability of risk"
+navbar:
+  left:
+    - text: "Home"
+      href: "index.html"
+    - text: "Dropdown"
+      menu:
+        - text: "Landing page"
+          href: "landing-page.html"
+        - text: "about"
+          href: "about.html"
+        - text: "Index"
+          href: "index.html"
 description: |
   Welcome to the website. I hope you enjoy it!
 site: distill::distill_website
 ---
 
-[Link to Landing Page](landing_page.html)
+[Link to Landing Page](landing-page.html)
+[Link to Index](index.html)
+[Link to About](about.html)
+
+
+
 
 
 library(rmarkdown)
