--- a/about.Rmd
+++ b/about.Rmd
@@ -4,6 +4,8 @@ description: |
   Some additional details about the website
 ---
 
+ footer and a table of contents on each page.
+
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE)
 ```
@@ -11,3 +13,5 @@ knitr::opts_chunk$set(echo = FALSE)
 ![The trend of the temporal stability of risk](C:/Users/holze/Documents/Website/highlight3.jpg)
 
 render_site()
+
+An about me page: Include your photo, a text about you, and a few links of your choice (i.e., Email, LinkedIn). Tip 1: This article from Alison Hill has great step-by-step details on how to make postcards.
