--- a/about.Rmd
+++ b/about.Rmd
@@ -1,17 +1,18 @@
 ---
-title: "About this site"
+title: "About"
+color1: "#5A59A3" # Farbe 1 vom Hintergrundverlauf
+color2: "#C66060" # Farbe 2 vom Hintergrundverlauf
+angle: 130        # Winkel für Hintergrundverlauf diese drei Parameter gehören auf *jede* Haupt- und Unterseite, welche die Farbe haben soll.
 description: |
-  Some additional details about the website
+  Hier kann man noch eine Beschreibung für die Seite reinschreiben. (Sie wird aber nicht angezeigt, also mehr ein Kommentar als Beschreibung)
 ---
-
- footer and a table of contents on each page.
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE)
 ```
 
-![The trend of the temporal stability of risk](C:/Users/holze/Documents/Website/highlight3.jpg)
+```{r, echo=FALSE, out.width = "99%", out.height = "99%"}
+knitr::include_graphics("pusheen2.gif")
+```
 
-render_site()
-
-An about me page: Include your photo, a text about you, and a few links of your choice (i.e., Email, LinkedIn). Tip 1: This article from Alison Hill has great step-by-step details on how to make postcards.
+What should I put here????? Look at the cute cats!!!
