--- a/landing page.Rmd
+++ b/landing page.Rmd
@@ -1,16 +1,11 @@
 ---
-title: "landing page"
-output:
-  html_document:
-    css: 
-      - "body { background-color: lightblue; }"
+title: "Landing Page"
+color1: "#5A59A3" # Farbe 1 vom Hintergrundverlauf
+color2: "#C66060" # Farbe 2 vom Hintergrundverlauf
+angle: 130        # Winkel für Hintergrundverlauf diese drei Parameter gehören auf *jede* Haupt- und Unterseite, welche die Farbe haben soll.
+description: |
+  Hier kann man noch eine Beschreibung für die Seite reinschreiben. (Sie wird aber nicht angezeigt, also mehr ein Kommentar als Beschreibung)
 ---
-
- footer and a table of contents on each page.
-
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE)
-```
 
 
 ## Author
@@ -26,10 +21,11 @@ This concept is essential in various domains, including environmental risk asses
 Understanding the dynamics of temporal stability in risk perception can provide a comprehensive understanding of how societies respond to emerging threats and challenges, facilitating the development of proactive and effective risk mitigation strategies."
 
 
-picture highlight3
-
-A landing page: Include author, published date, an introductory text, and a photo related to your website.
-
-
+```{r, echo=FALSE, out.width = "90%", out.height = "90%"}
+knitr::include_graphics("highlight3.jpg")
+```
 
 
+<footer>
+  <p>This is the footer text. You can customize it with any information you want to include, such as contact details, copyright information, or links.</p>
+</footer>
